fixed alignment of categories

--- a/src/assets/scss/components/storiesList.scss
+++ b/src/assets/scss/components/storiesList.scss
@@ -30,6 +30,11 @@
   &-author {
     align-items: center;
     display: flex;
+    flex-basis: 12em;
+  }
+
+  &-category {
+    flex-basis: 9em;
   }
 
   .category-text {
